Add Windows Eclipse launch config and update README with Windows instructions